# third-party-api-clients

./: Cargo.toml  Makefile
docusign/: Cargo.toml
generator/src/: main.rs  types.rs
giphy/: Cargo.toml
github/: Cargo.toml
google/admin/: Cargo.toml
google/calendar/: Cargo.toml
google/cloud-resource-manager/: Cargo.toml
google/drive/: Cargo.toml
google/groups-settings/: Cargo.toml
google/sheets/: Cargo.toml
gusto/: Cargo.toml
mailchimp/: Cargo.toml
mailchimp/src/: types.rs
okta/: Cargo.toml
ramp/: Cargo.toml
remote/: Cargo.toml  README.md
remote/src/: company_managers.rs  countries.rs  employments.rs  lib.rs  sandbox.rs  time_off.rs  types.rs
rev.ai/: Cargo.toml
sendgrid/: Cargo.toml
shipbob/: Cargo.toml
shopify/: Cargo.toml
slack/: Cargo.toml
specs/remote/: remote.v1.json
stripe/: Cargo.toml
tripactions/: Cargo.toml
zoom/: Cargo.toml
