[workspace]
members = [
	"docusign",
	"generator",
	"giphy",
	"github",
	"google/admin",
	"google/calendar",
	"google/cloud-resource-manager",
	"google/drive",
	"google/groups-settings",
	"google/sheets",
	"gusto",
	"mailchimp",
	"okta",
	"ramp",
	"remote",
	"rev.ai",
	"sendgrid",
	"shipbob",
	"shopify",
	"slack",
	"stripe",
	"tripactions",
	"zoom"
]
